--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-cli-test-info": "^1.0.0",
     "ember-cli-typescript": "^2.0.0-beta.2",
     "ember-cli-version-checker": "^3.1.2",
+    "ember-fetch": "^5.1.3",
     "ember-inflector": "^3.0.0",
     "git-repo-info": "^2.0.0",
     "heimdalljs": "^0.3.0",
