--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "semver": "^5.6.0",
     "silent-error": "^1.1.1"
   },
+  "peerDependencies": {
+    "ember-fetch": "^5.1.3"
+  },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.2.0",
     "@ember-decorators/babel-transforms": "^5.1.4",
@@ -104,6 +107,7 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
+    "ember-fetch": "^5.1.3",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
     "ember-qunit-assert-helpers": "^0.2.1",
